name:                hvc
version:             0.1.0.0
synopsis:            hvc
description:         Please see README.md
homepage:            http://github.com/federicotdn/hvc
license:             BSD3
license-file:        LICENSE
author:              Federico Tedin
copyright:           2010 Federico Tedin
category:            VCS
build-type:          Simple
cabal-version:       >=1.10

executable hvc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
