name:                hvc
version:             0.1.0.0
synopsis:            Basic version control system
description:         Please see README.md
homepage:            http://github.com/federicotdn/hvc
license:             GPL-3
license-file:        LICENSE
author:              Federico Tedin
copyright:           2015 Federico Tedin
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable hvc
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Args,
                       Init,
                       Commit,
                       DirTree,
                       Checkout,
                       Log,
                       Status,
                       Hash,
                       Utils,
                       DirTreeUtils
  build-depends:       base >= 4.7 && < 5,
                       cryptohash,
                       bytestring,
                       text,
                       directory,
                       filepath,
                       directory-tree,
                       zlib,
                       containers,
                       time